# CXL-Specificaitons

./: README.md  pdf2md.py  pyproject.toml
CXL_1.1/: CXL 1.1 Specification.md
CXL_2.0/: CXL 2.0 Specification.md
